--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -24,6 +24,9 @@
     background-repeat: no-repeat;
     background-position: bottom right, left;
 }
+section{
+    margin-top: 130px;
+}
 
 /* header and navigation styles */
 nav {
@@ -87,10 +90,11 @@ main {
 }
 
 .section-title {
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
     color: #181818;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .about-description {
@@ -117,3 +121,31 @@ main {
     font-size: 20px;
     color: #474747;
 }
+
+/* what i do styles */
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+
+.skill-description {
+    font-weight: 400;
+    font-size: 16px;
+    color: #757575;
+}
+/* resume styles */
