--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -83,7 +83,7 @@ main {
 }
 
 /* about section styles */
-.about {
+.about{
     background: #FFF8F3;
     border-radius: 10px;
     padding: 200px 150px;
@@ -178,4 +178,30 @@ main {
 .resume-button{
     margin-top: 50px;
     text-align: center;
+}
+/* contact section */
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+.contact .section-title{
+    text-align: left;
+}
+.section-description{
+    margin-bottom: 20px;
+}
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+input{
+    height: 64px;
+}
+.contact a{
+    text-decoration: none;
+    padding: 0 2px;
 }
