--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -33,7 +33,7 @@ section {
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 .nav-title {
@@ -203,5 +203,4 @@ input{
 }
 .contact a{
     text-decoration: none;
-    padding: 0 2px;
 }
