--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -217,3 +217,11 @@ input{
 .contact a{
     text-decoration: none;
 }
+
+/* footer section */
+.footer{
+    display: flex;
+    background: #FFF8F3;
+    gap: 400px;
+    justify-content: center;
+}
